:recycle: server 経由のジャケット upload に整理
